<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/command_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/argument_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/argument_edit_text"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/execute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/execute_button_text" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button_text" />

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/output_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>
</LinearLayout>
