<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Strength -->
    <TextView
        android:id="@+id/strength_text_view"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="start"
        android:text="@string/strength"
        app:layout_constraintBaseline_toBaselineOf="@+id/strength_plus_button"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/strength_value_text_view"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/strength_plus_button"
        app:layout_constraintStart_toEndOf="@+id/strength_text_view" />

    <Button
        android:id="@+id/strength_plus_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/plus_sign"
        app:layout_constraintStart_toEndOf="@+id/strength_value_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/strength_minus_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minus_sign"
        app:layout_constraintStart_toEndOf="@+id/strength_plus_button"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Dexterity -->
    <TextView
        android:id="@+id/dexterity_text_view"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="start"
        android:text="@string/dexterity"
        app:layout_constraintBaseline_toBaselineOf="@+id/dexterity_plus_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dexterity_value_text_view"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dexterity_plus_button"
        app:layout_constraintStart_toEndOf="@+id/dexterity_text_view" />

    <Button
        android:id="@+id/dexterity_plus_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/plus_sign"
        app:layout_constraintStart_toEndOf="@+id/dexterity_value_text_view"
        app:layout_constraintTop_toBottomOf="@+id/strength_plus_button" />

    <Button
        android:id="@+id/dexterity_minus_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minus_sign"
        app:layout_constraintStart_toEndOf="@+id/dexterity_plus_button"
        app:layout_constraintTop_toBottomOf="@+id/strength_minus_button" />

    <!-- Luck -->
    <TextView
        android:id="@+id/luck_text_view"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="start"
        android:text="@string/luck"
        app:layout_constraintBaseline_toBaselineOf="@+id/luck_plus_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/luck_value_text_view"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/luck_plus_button"
        app:layout_constraintStart_toEndOf="@+id/luck_text_view" />

    <Button
        android:id="@+id/luck_plus_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/plus_sign"
        app:layout_constraintStart_toEndOf="@+id/luck_value_text_view"
        app:layout_constraintTop_toBottomOf="@+id/dexterity_plus_button" />

    <Button
        android:id="@+id/luck_minus_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minus_sign"
        app:layout_constraintStart_toEndOf="@+id/luck_plus_button"
        app:layout_constraintTop_toBottomOf="@+id/dexterity_minus_button" />

</merge>